[package]
name = "leptos-tutorial"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.0", features = ["csr"] }
markdown = "0.3.0"
reqwest = "0.12.9"
serde = "1.0.215"
serde_json = "1.0.133"
tokio = { version = "1.42.0", features = ["rt", "macros", "test-util"] }
typed-builder = "0.20.0"
